# TASTE-SAMV71-Drivers

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  install.sh
configurations/: samv71-serial-ccsds-driver.asn
src/: CMakeLists.txt
src/RuntimeMocks/: Broker.h  CMakeLists.txt  drivers_config.h  request_size.h  system_spec.c  system_spec.h
src/app/: CMakeLists.txt  PacketSender.c  PacketSender.h  main.c
src/linux_serial_ccsds/: CMakeLists.txt  samv71_serial_ccsds.c  samv71_serial_ccsds.h
src/samv71_serial_ccsds/: CMakeLists.txt  samv71_serial_ccsds.c  samv71_serial_ccsds.h  samv71_serial_ccsds_internal.h
